--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,7 +29,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; {{ site.time | date: '%Y' }}. All rights reserved.
+      started by 2020. 12. 16.
     </p>
   </div>
 </div>
