--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
 <!-- Target for toggling the sidebar `.sidebar-checkbox` is for regular
      styles, `#sidebar-checkbox` for behavior. -->
-<input type="checkbox" class="sidebar-checkbox" id="sidebar-checkbox">
+<input type="checkbox" class="sidebar-checkbox" id="sidebar-checkbox" />
 
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
@@ -9,27 +9,25 @@
   </div>
 
   <nav class="sidebar-nav">
-    <a class="sidebar-nav-item{% if page.title == 'Home' %} active{% endif %}" href="{{ '/' | absolute_url }}">Home</a>
+    <a
+      class="sidebar-nav-item{% if page.title == 'Home' %} active{% endif %}"
+      href="{{ '/' | absolute_url }}"
+      >Home
+    </a>
 
-    {% comment %}
-      The code below dynamically generates a sidebar nav of pages with
-      `layout: page` in the front-matter. See readme for usage.
-    {% endcomment %}
-
-    {% assign pages_list = site.pages | sort:"url" %}
-    {% for node in pages_list %}
-      {% if node.title != null %}
-        {% if node.layout == "page" %}
-          <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url | absolute_url }}">{{ node.title }}</a>
-        {% endif %}
-      {% endif %}
-    {% endfor %}
-
+    {% comment %} The code below dynamically generates a sidebar nav of pages
+    with `layout: page` in the front-matter. See readme for usage. {% endcomment
+    %} {% assign pages_list = site.pages | sort:"index" %} {% for node in
+    pages_list %} {% if node.title != null %} {% if node.layout == "page" %}
+    <a
+      class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}"
+      href="{{ node.url | absolute_url }}"
+      >{{ node.title }}</a
+    >
+    {% endif %} {% endif %} {% endfor %}
   </nav>
 
   <div class="sidebar-item">
-    <p>
-      started by 2020. 12. 16.
-    </p>
+    <p>started by 2020. 12. 16.</p>
   </div>
 </div>
