--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,6 +28,11 @@
     href="https://fonts.googleapis.com/css2?family=Poor+Story&display=swap"
     rel="stylesheet"
   />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Jua&display=swap"
+    rel="stylesheet"
+  />
   <link
     rel="apple-touch-icon-precomposed"
     sizes="144x144"
