--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,9 +28,7 @@
   </nav>
 
   <div class="sidebar-item">
-    <p>
-      past: 그저 그런 컴공생(https://bnzn2426.tistory.com/) present: on1ystar
-    </p>
+    <p>past: 그저 그런 컴공생(bnzn2426.tistory.com) present: on1ystar</p>
     <p>started by 2020. 12. 16.</p>
   </div>
 </div>
