--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -163,7 +163,7 @@ code {
   font-size: 85%;
   color: #ff7f50;
   font-weight: bold;
-  background-color: #f8f8ff;
+  background-color: #f8f8fa;
   border-radius: 3px;
 }
 pre {
