--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -98,6 +98,7 @@ h6 {
   padding-bottom: 1rem;
   margin-bottom: 3rem;
   border-bottom: 1px solid #eee;
+  box-shadow: 0px 10px 20px #eee;
 }
 .masthead-title {
   margin-top: 0;
