--- a/public/css/syntax.css
+++ b/public/css/syntax.css
@@ -185,7 +185,9 @@
 .highlight .il {
   color: #e06339;
 } /* Literal.Number.Integer.Long */
-.highlight .n {
+.highlight .n,
+.nx,
+p {
   color: #e5e5e5;
 }
 
