--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,9 +15,7 @@
       >Home
     </a>
 
-    {% comment %} The code below dynamically generates a sidebar nav of pages
-    with `layout: page` in the front-matter. See readme for usage. {% endcomment
-    %} {% assign pages_list = site.pages | sort:"index" %} {% for node in
+    {% assign pages_list = site.pages | sort:"index" %} {% for node in
     pages_list %} {% if node.title != null %} {% if node.layout == "page" %}
     <a
       class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}"
@@ -28,7 +26,9 @@
   </nav>
 
   <div class="sidebar-item">
-    <p>past: 그저 그런 컴공생(bnzn2426.tistory.com) present: on1ystar</p>
-    <p>started by 2020. 12. 16.</p>
+    <div class="sidebar-text" style="position: absolute; bottom: 4rem">
+      <p>past blog-그저 그런 컴공생 present-on1ystar</p>
+      <p>started by 2020. 12. 16.</p>
+    </div>
   </div>
 </div>
