--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,6 +21,10 @@
   <link rel="stylesheet" href="{{ '/public/css/lanyon.css' | absolute_url }}" />
   <link
     rel="stylesheet"
+    href="{{ '/public/css/mystyle.css' | absolute_url }}"
+  />
+  <link
+    rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400"
   />
   <link rel="preconnect" href="https://fonts.gstatic.com" />
