update code color

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -183,7 +183,7 @@ pre {
 pre code {
   padding: 0;
   font-size: 100%;
-  color: inherit;
+  color: #d0d0d0;
   background-color: transparent;
 }
 
