posting git command list

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -161,7 +161,7 @@ pre {
 code {
   padding: 0.25em 0.5em;
   font-size: 85%;
-  color: #ff7f50;
+  color: #f9632c;
   font-weight: bold;
   background-color: #f8f8fa;
   border-radius: 3px;
