--- a/public/css/syntax.css
+++ b/public/css/syntax.css
@@ -116,7 +116,7 @@
   color: #2f6f9f;
 } /* Name.Tag */
 .highlight .nv {
-  color: #033;
+  color: rgb(1, 68, 68);
 } /* Name.Variable */
 .highlight .ow {
   color: #069;
