--- a/public/css/syntax.css
+++ b/public/css/syntax.css
@@ -5,8 +5,7 @@
   color: #999;
 } /* Comment */
 .highlight .err {
-  color: #a00;
-  background-color: #faa;
+  color: whitesmoke;
 } /* Error */
 .highlight .k {
   color: #069;
