add footer to default.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,65 @@
       </div>
 
       <div class="container content">{{ content }}</div>
+
+      <footer
+        style="
+          padding: 36px 0 20px 0;
+          background-color: #fafdff;
+          color: #9296a5;
+          border-top: 1px solid #d8e0e7;
+          border-bottom: 1px solid #d8e0e7;
+        "
+      >
+        <div
+          class="info"
+          style="
+            display: inline-block;
+            margin-left: 25%;
+            font-size: 24px;
+            font-weight: bolder;
+          "
+        >
+          on1ystar <br />
+          <span style="font-size: 16px; font-weight: bold"
+            >같이 일하고 싶은 개발자</span
+          >
+        </div>
+        <div
+          class="accounts"
+          style="display: inline-block; margin-left: 15%; margin-right: 25%"
+        >
+          <a style="display: inline-block" href="https://github.com/on1ystar"
+            ><img src="{{'/public/img/logo/GitHub-Mark-32px.png'}}"
+          /></a>
+          <a
+            href="https://mail.naver.com/write/popup?srvid=note&to=tjdwls0607@naver.com"
+            ><img
+              style="
+                width: 38px;
+                height: 38px;
+                display: inline-block;
+                margin-left: 36px;
+              "
+              src="{{'/public/img/logo/naver-mail.png'}}"
+          /></a>
+          <a href="mailto:tjdwls0607@gmail.com"
+            ><img
+              style="
+                width: 38px;
+                height: 38px;
+                display: inline-block;
+                margin-left: 36px;
+              "
+              src="{{'/public/img/logo/gmail.png'}}"
+          /></a>
+        </div>
+        <div style="width: 100%">
+          <span style="font-size: 16px; font-weight: normal; margin-left: 75%"
+            >&copy; on1ystar. 2021
+          </span>
+        </div>
+      </footer>
     </div>
 
     <label for="sidebar-checkbox" class="sidebar-toggle"></label>
