--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,8 +27,14 @@
 
   <div class="sidebar-item">
     <div class="sidebar-text" style="position: absolute; bottom: 4rem">
-      <p>past blog-그저 그런 컴공생 present-on1ystar</p>
-      <p>started by 2020. 12. 16.</p>
+      <p>
+        [past blog]
+        <a href="https://bnzn2426.tistory.com/">그저 그런 컴공생</a> [present]
+        <a href="https://on1ystar.github.io/">on1ystar</a>
+      </p>
+      <p style="font-size: medium; font-weight: normal">
+        started by 2020. 12. 16
+      </p>
     </div>
   </div>
 </div>
