--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -159,11 +159,11 @@ pre {
   font-family: Menlo, Monaco, "Courier New", monospace;
 }
 code {
-  padding: 0.25em 0.5em;
+  padding: 0.2em 0.4em 0em;
   font-size: 85%;
   color: #f9632c;
   font-weight: bold;
-  background-color: #f8f8fa;
+  background-color: #ecf1ff;
   border-radius: 3px;
 }
 pre {
