--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,7 +73,7 @@
         </div>
         <div style="width: 100%">
           <span style="font-size: 16px; font-weight: normal; margin-left: 75%"
-            >&copy; on1ystar. 2021
+            >Powered by GitHub Pages. &copy; 2021.
           </span>
         </div>
       </footer>
