--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -50,7 +50,7 @@ h5,
 h6 {
   font-family: "Jua", sans-serif;
   font-weight: 400;
-  color: #414b65;
+  color: #151b2d;
   letter-spacing: -0.025rem;
 }
 
