--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -57,7 +57,7 @@ html {
 }
 
 body {
-  color: #525f7f;
+  color: #2f3b58;
   background-color: #fff;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
@@ -65,7 +65,7 @@ body {
 
 /* No `:visited` state is required by default (browsers will use `a`) */
 a {
-  color: #0970b9;
+  color: #5893c5;
   text-decoration: none;
 }
 a strong {
