--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -1,4 +1,19 @@
 .text-to-center {
   margin: 36px 0;
+  font-size: x-large;
+  font-weight: 600;
   text-align: center;
+  text-decoration: underline;
+}
+
+.text-shadow-blue {
+  text-shadow: rgb(93, 117, 255) 1px 0 10px;
+}
+
+.text-shadow-orange {
+  text-shadow: rgb(255, 158, 93) 1px 0 10px;
+}
+
+.text-shadow-yellow {
+  text-shadow: rgb(252, 255, 93) 1px 0 10px;
 }
