--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -1,4 +1,19 @@
 .text-to-center {
   margin: 36px 0;
+  font-size: 3rem;
+  font-weight: 600;
   text-align: center;
+  text-decoration: underline;
+}
+
+.text-shadow-blue {
+  text-shadow: rgb(133, 151, 255) 1px 5px 35px;
+}
+
+.text-shadow-orange {
+  text-shadow: rgb(255, 188, 133) 1px 5px 35px;
+}
+
+.text-shadow-yellow {
+  text-shadow: rgb(255, 243, 133) 1px 5px 35px;
 }
