--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -3,7 +3,7 @@
 }
 
 .text-to-center {
-  margin: 60px 0;
+  margin: 120px 0 60px 0;
   font-size: 2rem;
   font-weight: 600;
   text-align: center;
@@ -20,4 +20,13 @@
 
 .text-shadow-yellow {
   text-shadow: rgb(255, 243, 133) 1px 3px 3px;
+}
+
+.intro {
+  display: block;
+  padding: 30px 0;
+  text-align: center;
+  background-color: whitesmoke;
+  color: rgb(192, 192, 192);
+  font-style: italic;
 }
