--- a/_includes/head.html
+++ b/_includes/head.html
@@ -50,6 +50,11 @@
     title="RSS"
     href="{{ '/atom.xml' | absolute_url }}"
   />
+  <link
+    rel="stylesheet"
+    href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/styles/default.min.css"
+  />
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/highlight.min.js"></script>
 
   {% if site.google_analytics_id %}
   <script>
