--- a/public/css/syntax.css
+++ b/public/css/syntax.css
@@ -8,7 +8,7 @@
   color: whitesmoke;
 } /* Error */
 .highlight .k {
-  color: #069;
+  color: #9749ff;
 } /* Keyword */
 .highlight .o {
   color: rgb(202, 200, 200);
@@ -61,7 +61,7 @@
   color: #069;
 } /* Keyword.Constant */
 .highlight .kd {
-  color: #069;
+  color: #2e9fff;
 } /* Keyword.Declaration */
 .highlight .kn {
   color: #069;
@@ -82,7 +82,7 @@
   color: #d44950;
 } /* Literal.String */
 .highlight .na {
-  color: #4f9fcf;
+  color: #85ccf7;
 } /* Name.Attribute */
 .highlight .nb {
   color: #04aad4;
@@ -136,35 +136,35 @@
   color: #e06339;
 } /* Literal.Number.Oct */
 .highlight .sb {
-  color: #c30;
+  color: #ff612d;
 } /* Literal.String.Backtick */
 .highlight .sc {
-  color: #c30;
+  color: #ff612d;
 } /* Literal.String.Char */
 .highlight .sd {
-  color: #c30;
+  color: #ff612d;
   font-style: italic;
 } /* Literal.String.Doc */
 .highlight .s2 {
-  color: #c30;
+  color: #ff612d;
 } /* Literal.String.Double */
 .highlight .se {
-  color: #c30;
+  color: #ff612d;
 } /* Literal.String.Escape */
 .highlight .sh {
-  color: #c30;
+  color: #ff612d;
 } /* Literal.String.Heredoc */
 .highlight .si {
   color: #a00;
 } /* Literal.String.Interpol */
 .highlight .sx {
-  color: #c30;
+  color: #ff612d;
 } /* Literal.String.Other */
 .highlight .sr {
   color: #3aa;
 } /* Literal.String.Regex */
 .highlight .s1 {
-  color: #c30;
+  color: #ff612d;
 } /* Literal.String.Single */
 .highlight .ss {
   color: #fc3;
