--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,9 +28,8 @@
   <div class="sidebar-item">
     <div class="sidebar-text" style="position: absolute; bottom: 4rem">
       <p>
-        [past blog]
-        <a href="https://bnzn2426.tistory.com/">그저 그런 컴공생</a> [present]
-        <a href="https://on1ystar.github.io/">on1ystar</a>
+        [present blog]
+        <a href="https://bnzn2426.tistory.com/">티스토리 블로그</a>
       </p>
       <p style="font-size: medium; font-weight: normal">
         started by 2020. 12. 16
