--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,7 +29,7 @@
     <div class="sidebar-text" style="position: absolute; bottom: 4rem">
       <p>
         [present blog]
-        <a href="https://bnzn2426.tistory.com/">티스토리 블로그</a>
+        <a href="https://bnzn2426.tistory.com/">Tistory</a>
       </p>
       <p style="font-size: medium; font-weight: normal">
         started by 2020. 12. 16
